--- a/test.tex
+++ b/test.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{atbegshi}
+\usepackage{media9}
+\usepackage{hyperref}
 
 \setmainfont{DejaVu Serif}
 
@@ -31,15 +33,6 @@ function recursive_expand_node(n)
 end
 \end{luacode*}
 
-
-
-\begin{document}
-
-\null
-
-A-\textcolor{red}{B}
-%\includegraphics{example-image-a}
-
 \AtBeginShipout{%
   \directlua{
     local n = tex.box["AtBeginShipoutBox"]
@@ -51,5 +44,19 @@ A-\textcolor{red}{B}
     file:close()
   }
 }
+
+\begin{document}
+
+\includemedia[
+width=0.6\linewidth,height=0.3375\linewidth, % 16:9
+activate=pageopen,
+flashvars={
+modestbranding=1 % no YT logo in control bar
+&autohide=1 % controlbar autohide
+&showinfo=0 % no title and other info before start
+&rel=0 % no related videos after end
+}
+]{}{http://www.youtube.com/v/r382kfkqAF4?rel=0}
+
 
 \end{document}
